--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "typewriter-effect": "^2.21.0"
